--- a/WindowsFormsApplication1/Illumination Design Calculator.csproj
+++ b/WindowsFormsApplication1/Illumination Design Calculator.csproj
@@ -125,6 +125,21 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pictureSpacing.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pictureSpacingLayout1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pictureSpacingLayout2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pictureRoomIndex1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pictureRoomIndex2.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
