--- a/WindowsFormsApplication1/Illumination Design Calculator.csproj
+++ b/WindowsFormsApplication1/Illumination Design Calculator.csproj
@@ -25,8 +25,8 @@
     <ProductName>Illumination Design Calculator</ProductName>
     <PublisherName>SOX</PublisherName>
     <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>11</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.1.0</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
